[gd_scene load_steps=4 format=3 uid="uid://uta22w8dc6tk"]

[ext_resource type="Texture2D" uid="uid://cg058g41gpfx4" path="res://resources/sprites/icons/archetype_icons/item_template.png" id="1_310i5"]
[ext_resource type="Script" path="res://unit drafting/Archetype Draft/archetype_icons/item_archetype_icon.gd" id="2_phw66"]
[ext_resource type="Texture2D" uid="uid://dm2414hr3ik0c" path="res://resources/sprites/icons/weapon_icons/axe_icon.png" id="3_qf5xt"]

[node name="ItemArchetypeIcon" type="TextureRect"]
texture = ExtResource("1_310i5")
script = ExtResource("2_phw66")

[node name="IconContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = -7.0
offset_right = 41.0
offset_bottom = 36.0

[node name="UpperContainer" type="HBoxContainer" parent="IconContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0
alignment = 1

[node name="ArchetypeSubIcon4" type="TextureRect" parent="IconContainer/UpperContainer"]
layout_mode = 2
texture = ExtResource("3_qf5xt")

[node name="ArchetypeSubIcon5" type="TextureRect" parent="IconContainer/UpperContainer"]
layout_mode = 2
texture = ExtResource("3_qf5xt")

[node name="LowerContainer" type="HBoxContainer" parent="IconContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0
alignment = 1

[node name="ArchetypeSubIcon1" type="TextureRect" parent="IconContainer/LowerContainer"]
layout_mode = 2
texture = ExtResource("3_qf5xt")

[node name="ArchetypeSubIcon2" type="TextureRect" parent="IconContainer/LowerContainer"]
layout_mode = 2
texture = ExtResource("3_qf5xt")

[node name="ArchetypeSubIcon3" type="TextureRect" parent="IconContainer/LowerContainer"]
layout_mode = 2
texture = ExtResource("3_qf5xt")
